fixing the menubar and alignment of boxes

--- a/pages/components/dashboard/dash.module.css
+++ b/pages/components/dashboard/dash.module.css
@@ -5,11 +5,12 @@
   color: white;
   width: 20%;
   min-width: 230px;
-  max-width: 250px;
+  max-width: 250px; 
   height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  /* position:fixed; */
 }
 .card_con {
   display: flex;
@@ -48,6 +49,7 @@
 .box_con{
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 .box_con1{
     display: flex;
@@ -56,7 +58,6 @@
 
 }
 .box_card {
-    margin: 10px;
   padding: 20px 30px;
   background-color: white;
   width: 49%;
@@ -108,7 +109,9 @@
 .footerContent {
   padding: 10px;
 }
-
+.lables{
+  margin-right: 30px;
+}
 /* tablets*/
 
 @media only screen and (max-width: 1130px) {
@@ -136,6 +139,9 @@
     justify-content: space-between;
     width: 100%;
     grid-template-columns: repeat(3, minmax(33%, auto));
+  }
+  .lables{
+    margin-right: 5px;
   }
 }
 @media only screen and (max-width: 670px) {
