--- a/styles/globals.css
+++ b/styles/globals.css
@@ -142,3 +142,14 @@ a {
   background-color: white;
   height : 30px;
 }
+.margin-right{
+  margin-left: 30px;
+}
+.menubar-icon {
+  display : none;
+}
+@media only screen and (max-width: 1130px) {
+  .menubar-icon {
+    display : ;
+  }
+}
